Add Dataset and Clean Names

--- a/fp_written_report.qmd
+++ b/fp_written_report.qmd
@@ -9,6 +9,23 @@ editor: source
 
 ## Exploratory Data Analysis
 
+```{r}
+#| include: false
+#| echo: false
+#| message: false
+#| warning: false
+
+library(tidyverse)
+library(janitor)
+
+sleep_productivity_stress <- read.csv("sleep_productivity_stress.csv") |>
+  clean_names() |>
+  rename("early_bird_or_night_owl" = "are_you_more_of_an_early_bird_or_a_night_owl",
+         "weekday_sleep_average" = "how_long_do_you_sleep_during_weekdays_on_average" ,
+         "avg_productivity_level" = "how_productive_are_you_during_weekdays_on_average_rate_your_productivity_on_the_following_scales_1_not_productive_2_4_somewhat_productive_5_very_productive",
+         "avg_stress_level" = "on_average_how_stressed_do_you_feel_during_weekdays_rate_your_stress_on_the_following_scales_1_not_stressed_2_4_somewhat_stressed_5_very_stressed")
+```
+
 ## Results
 
 ## Discussion
