Add citation and apa style file

--- a/fp_written_report.qmd
+++ b/fp_written_report.qmd
@@ -3,6 +3,8 @@ title: "SDS 220 Final Project - Written Report"
 author: "Evelyn Dinh & Sophie Biderman"
 format: pdf
 editor: source
+bibliography: citation.bib
+csl: apa.csl
 ---
 
 ```{r}
