--- a/citation.bib
+++ b/citation.bib
@@ -9,10 +9,20 @@
   publisher={Oxford University Press}
 }
 
-@misc{friday13,
-  title={Some People Are Too Superstitious To Have A Baby On Friday The 13th},
-  author={Carl, Bialik},
-  date={2016-05-13},
-  url={https://fivethirtyeight.com/features/some-people-are-too-superstitious-to-have-a-baby-on-friday-the-13th/},
-  urldate={2025-04-21}
+@misc{averagesleepduration,
+  author = {{University of Georgia Health Promotion}},
+  title = {Sleep - Health Promotion and Wellness},
+  url = {https://healthpromotion.uga.edu/sleep/},
+  urldate = {2025-04-27},
+}
+
+@misc{recommendedsleep,
+  author = {Ash Wallis},
+  publisher = {Southern New Hampshire Univerity},
+  title = {How Much Sleep Should a College Student Get?},
+  year = {2024},
+  month = {July},
+  day = {17},
+  url = {https://www.snhu.edu/about-us/newsroom/education/how-much-sleep-do-college-students-need},
+  urldate = {2025-04-27}
 }
