--- a/fp_written_report.qmd
+++ b/fp_written_report.qmd
@@ -251,7 +251,9 @@ kable(round(expected_counts, 2),
 
 print(chi_square_test)
 ```
-Assuming that our conditions for Chi-square test are met and $H_0$ is true, we have $\chi^2 = 14.223$ ~ $df = (R-1)(C-1) = (3-1)(3-1) = 4$ as our test statistics and degrees of freedom for our Chi-square Distribution.
+Assuming that our conditions for Chi-square test are met and $H_0$ is true, we have $\chi^2 = 14.223$ ~ $df = (R-1)(C-1) = (3-1)(3-1) = 4$ as our test statistics and degrees of freedom for our Chi-square Distribution. We have our $p-value = .006615$.
+
+We choose our significance level $\alpha = .01$ to control the Type 1 error rate.
 
 **Conclusion**: Our $p-value = .006615$ is smaller than $\alpha = .01$, therefore we reject the null hypothesis. We conclude that sleep duration and productivity level are significantly related.
 
@@ -331,9 +333,11 @@ kable(round(expected_counts_2, 2),
 
 print(chi_square_test_2)
 ```
-Assuming that our conditions for Chi-square test are met and $H_0$ is true, we have $\chi^2 = 20.293$ ~ $df = (R-1)(C-1) = (3-1)(3-1) = 4$ as our test statistics and degrees of freedom for our Chi-square Distribution.
+Assuming that our conditions for Chi-square test are met and $H_0$ is true, we have $\chi^2 = 20.293$ ~ $df = (R-1)(C-1) = (3-1)(3-1) = 4$ as our test statistics and degrees of freedom for our Chi-square Distribution. We have our $p-value = .000437$.
 
-**Conclusion**: Our $p-value = .000437$ is smaller than $\alpha = .01$, therefore we reject the null hypothesis. We conclude that sleep duration and stress level are significantly related.
+We choose our significance level $\alpha = .01$ to control the Type 1 error rate.
+
+**Conclusion**: Our $p-value = .000437$ is smaller than $\alpha = .05$, therefore we reject the null hypothesis. We conclude that sleep duration and stress level are significantly related.
 
 **Interpretation**: The data provides sufficient evidence to support the claim that sleep duration significantly influences stress level at $\alpha = .01$ significance level.
 
